# claude-agent-sdk-study

./: agent1.py  hello.py  pyproject.toml
deep-research/: .env.example  .gitignore  README.md  pyproject.toml
deep-research/examples/: agent_example.py  simple_search.py
deep-research/src/deep_research/: __init__.py  main.py  tools.py
